# FractalTracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  get_hdr_env.sh  profile.sh
FractalTracer_msvc2019/: FractalTracer_msvc2019.sln  FractalTracer_msvc2019.vcxproj  FractalTracer_msvc2019.vcxproj.filters
glsl/: Builtin.frag  Common.frag  DistanceEstimate.frag  Double.frag  Dual.frag  DualBase.frag  FloatX.frag  FloatXBase.frag  Int.frag  LambertW.frag  LambertWBase.frag  Mandelbulb.frag  MengerSponge.frag  Overload.frag  README.md  Real.frag  RealBase.frag  Triplex.frag  TriplexBase.frag  Vec.frag  VecBase.frag  main.frag
src/: Amazingbox.h  AnalyticDEObject.h  BenesiPine2.h  CMakeLists.txt  Cubicbulb.h  Dual.h  DualDEObject.h  Makefile  MandalayKIFS.h  Mandelbulb.h  Material.h  MengerSponge.h  MengerSpongeC.h  Octopus.h  PseudoKleinian.h  QuadraticJuliabulb.h  Ray.h  Renderer.h  RiemannSphere.h  Scene.h  SceneObject.h  SimpleObjects.h  SphereTree.h  libs.cmake  main.cpp  real.h  triplex.h  vec.h  vec2.h  vec3.h
src/demo/: main.cpp
src/formulas/: AmazingSurf.h  Amazingbox.h  AmoserSine.h  BenesiPine2.h  BurningShip4D.h  Cubicbulb.h  Hopfbrot.h  Lambdabulb.h  MandalayKIFS.h  Mandelbulb.h  MengerSponge.h  MengerSpongeC.h  Octopus.h  Poincare.h  PseudoKleinian.h  QuadraticJuliabulb.h  RiemannSphere.h  SphereTree.h
src/functions/: RiemannSphere.h
src/maths/: Dual.h  quat.h  real.h  triplex.h  vec.h
src/renderer/: CameraParams.h  ColouringFunction.h  FormulaFactory.h  FractalParams.h  HDREnvironment.h  Material.h  Ray.h  Renderer.h  Scene.h  SceneBuilder.h  SceneObjectDesc.h  SceneParams.h
src/scene_objects/: AnalyticDEObject.h  DualDEObject.h  SceneObject.h  SimpleObjects.h
src/ui/: AnimationRenderer.cpp  AnimationRenderer.h  ImGuiPanels.cpp  ImGuiPanels.h  InteractiveCamera.cpp  InteractiveCamera.h  RenderController.cpp  RenderController.h  SceneSerializer.cpp  SceneSerializer.h  Timeline.cpp  Timeline.h  TimelinePanel.cpp  main_ui.cpp
